# CalculatorApp

./: CMakeLists.txt  LICENSE  README.md
build-linux/: CMakeCache.txt  Makefile  calculator  calculator_test  cmake_install.cmake
include/: arithmetic_operations.hpp  node.hpp  parser.hpp
src/: arithmetic_operations.cpp  main.cpp  node.cpp  parser.cpp
tests/: calculator_test.cpp
